fixed more spacing and labeled button

--- a/public/stylesheets/prod/carousel.css
+++ b/public/stylesheets/prod/carousel.css
@@ -103,7 +103,7 @@ li.active {
 }
 
 @media (max-width: 769px) {
-	.content {margin-top: 150px;}
+	/*.content {margin-top: 150px;}*/
 }
 
 @media (min-width: 768px) {
